fix(cards_api): get-collection-info not awaiting
